<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mapFragment">

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.surveyme.presentation.map.MapFragment"
        android:label="@string/navigation_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/tracksFragment"
        android:name="com.surveyme.presentation.tracks.TracksFragment"
        android:label="@string/navigation_tracks"
        tools:layout="@layout/fragment_tracks" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.surveyme.presentation.settings.SettingsFragment"
        android:label="@string/navigation_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>